--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  db:
+  postgres:
     image: postgres
     restart: always
     ports:
@@ -9,13 +9,13 @@ services:
       - POSTGRES_DB=backendTest
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-    
   adminer:
     image: adminer
     restart: always
     ports:
       - 8080:8080
-
+    depends_on:
+      - postgres
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.7.1
     container_name: elasticsearch
@@ -25,6 +25,8 @@ services:
       - discovery.type=single-node
     ports: 
       - 9200:9200
+    depends_on:
+      - postgres
   kibana:
     image: docker.elastic.co/kibana/kibana:8.7.1
     restart: always
@@ -34,4 +36,18 @@ services:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
     depends_on:
       - elasticsearch
+  # logstash:
+  #   build: .
+  #   environment:
+  #     - LOGSTASH_JDBC_URL=jdbc:postgresql://postgres:5432/postgres
+  #     - LOGSTASH_JDBC_DRIVER=org.postgresql.Driver
+  #     - LOGSTASH_JDBC_DRIVER_JAR_LOCATION=/usr/share/logstash/logstash-core/lib/jars/postgresql.jar
+  #     - LOGSTASH_JDBC_USERNAME=postgres
+  #     - LOGSTASH_JDBC_PASSWORD=postgres
+  #     - LOGSTASH_ELASTICSEARCH_HOST=http://elasticsearch:9200
+  #   ports:
+  #     - 9600:9600
+  #     - 5044:5044
+  #   depends_on:
+  #     - elasticsearch
 
